taxes ui alignment issues

--- a/app/design/frontend/Codilar/homelane/web/css/source/_custom-theme.less
+++ b/app/design/frontend/Codilar/homelane/web/css/source/_custom-theme.less
@@ -5698,7 +5698,7 @@ ol.product-items li.wishlist-active{
         }
     }
 }
-.price-box{
+.product-info-price{
     .all-taxes{
         font-weight: 500;
         font-size: 12px;
